--- a/LAB4/lab4.ipynb
+++ b/LAB4/lab4.ipynb
@@ -3,7 +3,9 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "Zadanie 1\n",
+   "source": [
+    "Zadanie 1\n"
+   ],
    "id": "f80d203b561e6b2b"
   },
   {
@@ -42,7 +44,6 @@
     "e = np.random.uniform(low=0, high=255, size=(128, 128))\n",
     "\n",
     "denominator = 0.0\n",
-    "\n",
     "sum_over = 0.0\n",
     "for x in range(f.shape[0]):\n",
     "    for y in range(f.shape[1]):\n",
@@ -106,8 +107,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-24T09:17:31.100787Z",
-     "start_time": "2025-10-24T09:17:30.876571Z"
+     "end_time": "2025-10-26T10:22:21.232905800Z",
+     "start_time": "2025-10-26T10:22:20.804275300Z"
     }
    },
    "cell_type": "code",
@@ -116,6 +117,7 @@
     "\n",
     "img_color1 = data.chelsea()[:300,:300]\n",
     "img_color2 = data.astronaut()[:300,:300]\n",
+    "print(img_color2.shape)\n",
     "# mnse\n",
     "print(np.sum((img_color1-img_color2)**2)/np.sum(img_color1**2))\n",
     "\n"
@@ -126,18 +128,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.023922897518192\n"
+      "(300, 300, 3)\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mNameError\u001B[39m                                 Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[1]\u001B[39m\u001B[32m, line 7\u001B[39m\n\u001B[32m      5\u001B[39m \u001B[38;5;28mprint\u001B[39m(img_color2.shape)\n\u001B[32m      6\u001B[39m \u001B[38;5;66;03m# mnse\u001B[39;00m\n\u001B[32m----> \u001B[39m\u001B[32m7\u001B[39m \u001B[38;5;28mprint\u001B[39m(\u001B[43mnp\u001B[49m.sum((img_color1-img_color2)**\u001B[32m2\u001B[39m)/np.sum(img_color1**\u001B[32m2\u001B[39m))\n",
+      "\u001B[31mNameError\u001B[39m: name 'np' is not defined"
      ]
     }
    ],
-   "execution_count": 45
+   "execution_count": 1
   },
   {
    "metadata": {
     "collapsed": true
    },
    "cell_type": "markdown",
-   "source": "Zadanie 2\n",
+   "source": [
+    "Zadanie 2\n"
+   ],
    "id": "ba53a8253315b061"
   },
   {
@@ -223,19 +238,25 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "Zadanie 3",
+   "source": [
+    "Zadanie 3"
+   ],
    "id": "a19896a2b9514208"
   },
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "Zadanie 4",
+   "source": [
+    "Zadanie 4"
+   ],
    "id": "610fb5bfb12000c8"
   },
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "Zadanie 5",
+   "source": [
+    "Zadanie 5"
+   ],
    "id": "99353601d780c1f8"
   },
   {
@@ -243,7 +264,7 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "",
+   "source": [],
    "id": "ef9d399ca9dcbe8b"
   }
  ],
